its implementation. Also revamped QShrdMemMutex to handle being used before static
init has kicked in.
* (1148) Added Maths::Vector support to QHostAddress in order to speed IP compares.
Also added unfinished new FXNetworkService class which will be finished later when
I get the time.
* [master f1fa43e] Migrated Tn and TnFOX SVN repos over to GIT.
+ [master xxxxxxx] Added memsize() to all memory functions.
* [master xxxxxxx] Updated SQLite3 to v3.6.23.1 and now have TnFXSQLDB_sqlite3 call
sqlite3_config in order to replace memory allocator rather than applying patch to
source.


v0.88.1 31st October 2008:
-=-=-=-=-=-=-=-=-=-=-=-=-=
T (svnr) description
B (1080) TnFXSQLDBIPCMsgsI::ColumnData was being used inside a vector<> when
it has move only semantics
B (1081) QFileInfo::baseName() was returning one character too few. Thanks to CK
for reporting this.
B (1082) Copied fix from recent dlmalloc into nedmalloc - under high load bit
pinning was being corrupted on multiprocessor machines

+ (1080) Fixed implementation of move semantics for C++0x compilers. Added move
semantics to all container classes in TnFOX
* (1083) Initial set of fixes for Apple Mac OS X 10.5 support
* (1084) Full port to Mac OS X 10.5
* (1085) Merged FOX v1.6.34

v0.88 13th June 2008:
-=-=-=-=-=-=-=-=-=-=-
T (svnr) description
B (1041) fxendianswap4() wasn't reliable on GCC
B (1062) Unicode string rendering on Windows had magically broken itself again :(
B (1073) QFile and QMemMap were offsetting the file pointer by ludicrous
amounts when using CR/LF translation on 32 bit systems only

* (1036) Moved v1.4 branch into branches, replaced trunk with v1.6 branch
* (1037) Bumped TnFOX to v0.90
* (1038) Restored FXString::fill() which for some reason Jeroen removed
* (1039) Made QFile much more conservative when asking for permissions when
opening for read access
* (1041) Renamed all fxendianswapX() to fxendianswap() with typed parameter.